tests/invalid/Record_Invalid_8.whiley
type Node is { int x, int y }

method f(Node n) -> int:
    return n.z